--- a/tmux.conf
+++ b/tmux.conf
@@ -1,31 +1,50 @@
 #### COLOUR (Solarized 256)
+set -g default-terminal "xterm-256color"
 
-# default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+# UTF-8
+set-option -g status-utf8 on
 
-# default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+#supposedly fixes pausing in vim
+set-option -sg escape-time 1
 
-# active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+# # act like GNU screen
+unbind C-b
+set -g prefix C-a
+# Allow C-A a to send C-A to application
+bind C-a send-prefix
 
 # pane border
 set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-active-border-fg colour136 #base01
 
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+# act like vim
+set-window-option -g mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
 
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
+# Rebinding the pane splitting bindings
+# unbind % # Remove default bindings since we're replacing
+bind | split-window -h
+bind - split-window -v
 
-# clock
-set-window-option -g clock-mode-colour colour64 #green
+bind tab select-pane -t :.+
+
+# panes
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r H resize-pane -L 5
+bind-key -r L resize-pane -R 5
+
+
+set-option -g mode-mouse on
+set-option -g mouse-select-pane on
+set-option -g mouse-select-window on
+
+# vi-style controls for copy mode
+setw -g mode-keys vi
+
+source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
