--- a/tmux.conf
+++ b/tmux.conf
@@ -7,11 +7,9 @@ set-option -g status-utf8 on
 #supposedly fixes pausing in vim
 set-option -sg escape-time 1
 
-# # act like GNU screen
 unbind C-b
-set -g prefix C-a
-# Allow C-A a to send C-A to application
-bind C-a send-prefix
+set -g prefix C-x
+bind C-x send-prefix
 
 # pane border
 set-option -g pane-border-fg colour235 #base02
@@ -39,7 +37,6 @@ bind-key -r K resize-pane -U 5
 bind-key -r H resize-pane -L 5
 bind-key -r L resize-pane -R 5
 
-
 set-option -g mode-mouse on
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
@@ -48,3 +45,7 @@ set-option -g mouse-select-window on
 setw -g mode-keys vi
 
 source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
