adding copy and paste to tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 #### COLOUR (Solarized 256)
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 
 # UTF-8
 set-option -g status-utf8 on
@@ -43,8 +43,14 @@ set-option -g mouse-select-window on
 
 # vi-style controls for copy mode
 setw -g mode-keys vi
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
 
-source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+source /home/local/ANT/achesebr/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
