--- a/tmux.conf
+++ b/tmux.conf
@@ -50,7 +50,7 @@ bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
-source /home/local/ANT/achesebr/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
