Adding back in mouse mode

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,6 +30,10 @@ bind | split-window -h
 bind - split-window -v
 
 bind tab select-pane -t :.+
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
 
 # panes
 bind-key -r J resize-pane -D 5
