Updating git config

--- a/tmux.conf
+++ b/tmux.conf
@@ -55,3 +55,6 @@ source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
+
+# Larger scrollback history
+set-option -g history-limit 20000
