--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,4 +1,3 @@
-#### COLOUR (Solarized 256)
 set -g default-terminal "screen-256color"
 
 # UTF-8
@@ -21,8 +20,10 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+
+# move between windows
+bind-key C-h previous-window
+bind-key C-l next-window
 
 # Rebinding the pane splitting bindings
 # unbind % # Remove default bindings since we're replacing
@@ -58,3 +59,9 @@ set -g pane-base-index 1
 
 # Larger scrollback history
 set-option -g history-limit 20000
+
+# reload tmux config
+unbind r
+bind r \
+    source-file ~/.tmux.conf \;\
+    display 'Reloaded tmux config.'
