--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -2,6 +2,7 @@ set -g default-terminal "xterm-256color"
 
 # UTF-8
 set-option -g status-utf8 on
+set -g default-command "reattach-to-user-namespace -l /bin/zsh"
 
 #supposedly fixes pausing in vim
 set-option -sg escape-time 1
