latest updates to dotfiles

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,7 +1,7 @@
 set -g default-terminal "xterm-256color"
 
 # UTF-8
-set-option -g status-utf8 on
+# set-option -g status-utf8 on
 set -g default-command "reattach-to-user-namespace -l /bin/zsh"
 
 #supposedly fixes pausing in vim
@@ -46,12 +46,11 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+# bind-key -t vi-copy 'v' begin-selection
+# bind-key -t vi-copy 'y' copy-selection
 
-# Start windows and panes at 1, not 0
 set -g base-index 1
-set -g pane-base-index 1
+setw -g pane-base-index 1
 
 # Larger scrollback history
 set-option -g history-limit 20000
@@ -62,4 +61,5 @@ bind r \
     source-file ~/.tmux.conf \;\
     display 'Reloaded tmux config.'
 
-source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+run-shell "powerline-daemon -q"
+source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
