--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -2,7 +2,7 @@ set -g default-terminal "xterm-256color"
 
 # UTF-8
 # set-option -g status-utf8 on
-set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+# set -g default-command "reattach-to-user-namespace -l /bin/zsh"
 
 #supposedly fixes pausing in vim
 set-option -sg escape-time 1
@@ -53,7 +53,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Larger scrollback history
-set-option -g history-limit 20000
+set-option -g history-limit 50000
 
 # reload tmux config
 unbind r
@@ -62,4 +62,5 @@ bind r \
     display 'Reloaded tmux config.'
 
 run-shell "powerline-daemon -q"
-source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
+
+source "/Users/achesebr/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf"
